# cold-email-lab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: dashboard-design.html
profiles/: README.md  job-tracker.toml  leadflow.toml
prompts/: email_generation.md  fit_score.md  synthesis.md
src/cold_email_lab/: cli.py
src/cold_email_lab/analyse/: analyser.py
src/cold_email_lab/generate/: generator.py
src/cold_email_lab/llm/: client.py
src/cold_email_lab/outbound/: breaker.py  campaign.py  dashboard_html.py  inbox.py  leads.py  qa.py  sender.py  sequences.py  sourcing.py  stats.py
src/cold_email_lab/research/: researcher.py
src/cold_email_lab/scrape/: playwright_scraper.py
src/cold_email_lab/storage/: db.py  models.py
src/cold_email_lab/web/: __init__.py  app.py  fallback.py
src/cold_email_lab/web/static/: app.css  app.js
src/cold_email_lab/web/templates/: base.html  lead_detail.html  leads.html  message.html  overview.html  replies.html  review.html  send_confirm.html  send_result.html  sequences.html
