[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cold-email-lab"
version = "0.1.0"
description = "AI-powered cold email research and drafting — LeadFlow internal tool"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "playwright>=1.44.0",
    "httpx>=0.27.0",
    "anthropic>=0.28.0",
    "pydantic>=2.7.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
]

[project.scripts]
cold-email-lab = "cold_email_lab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cold_email_lab"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
